src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <label>イベント日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>管理者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentNumberOfParticipants__c</fullName>
        <label>現在参加者数</label>
        <summaryForeignKey>Participant__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsVolunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ボランティア活動</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>場所</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>イベント</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainImageURL__c</fullName>
        <label>Main Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MaxNumberOfParticipants__c</fullName>
        <label>参加者の最大数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>スポンサー代表</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>イベント</relationshipLabel>
        <relationshipName>VolunteerEvent</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>スポンサー</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>イベント</relationshipLabel>
        <relationshipName>VolunteerEvent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>概要</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種類</label>
        <picklist>
            <picklistValues>
                <fullName>ボランティア</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>お祭り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>就職EXPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>スポーツ試合</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ライブ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>イベント</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>イベント名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>